# arbytron

./: .gitignore  README.md  logging_config.py  main.py  metrics.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
connectors/: broker.py  rest_client.py  ws_client.py
db/: models.py  session.py
docs/: diagrams.md  future_build.md  httpx_async.md  kalshi_ws.md  polymarket_ws.md  proj.md  pydantic_models.md  scratchpad.md  spec.md  websockets.md
notebooks/: kalshi_markets.ipynb  market_match.ipynb
services/: execution_amm.py  execution_order_book.py  match.py  opportunity.py  persistence.py  position.py
tests/: test_broker.py  test_execution_amm.py  test_execution_order_book.py  test_match.py  test_models.py  test_opportunity.py  test_persistence.py  test_position.py  test_rest_client.py  test_ws_client.py
