[project]
name = "arbytron"
version = "0.1.0"
description = "Automated arbitrage bot framework for multi-outcome prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.23.0",
    "websockets>=10.0",
    "aiokafka>=0.8.0",
    "aioredis>=2.0.0",
    "pydantic>=1.10.0",
    "dependency-injector>=4.40.0",
    "structlog>=21.5.0",
    "prometheus_client>=0.14.1",
    "loguru>=0.6.0",
    "tenacity>=8.0.0",
    "sqlalchemy>=1.4.0",
    "asyncpg>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "uv>=0.1.0",
    "pytest-asyncio>=0.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=2.0.0",
    "mypy>=0.931",
    "flake8>=4.0.1",
    "black>=22.3.0",
    "isort>=5.10.0"
]
